syntax = "proto3";

option go_package = "proto/book";

package book;

message BookListReq {
    string title = 1;
}

// book list
message BookListRes {
   repeated Book books = 1;
}
message Book {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string created_at = 4;
    string updated_at = 5;
}

// book store
message BookStoreReq {
    string title = 1;
    string description = 2;
}
message BookStoreRes {
    Meta meta = 1;
}

// book detail
message BookDetailReq {
    int64 id = 1;
}
message BookDetailRes {
    Meta meta = 1;
    Book book = 2;
}

// book update
message BookUpdateReq {
    int64 id = 1;
    string title = 2;
    string description = 3;
}
message BookUpdateRes {
    Meta meta = 1;
}

// book delete
message BookDeleteReq {
    int64 id = 1;
}
message BookDeleteRes {
    Meta meta = 1;
}

// basic response
message Meta {
    int32 code = 1;
    string message = 2;
    bool error = 3;
}

service BookService {
    rpc List(BookListReq) returns (BookListRes) {}
    rpc Store(BookStoreReq) returns (BookStoreRes) {}
    rpc Detail(BookDetailReq) returns (BookDetailRes) {}
    rpc Update(BookUpdateReq) returns (BookUpdateRes) {}
    rpc Delete(BookDeleteReq) returns (BookDeleteRes) {}
}
